# dev-opencongress

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  zensical.toml
.github/workflows/: ci-unit-test.yml  docs.yml  gitflow-pr-rules.yml
app/: __init__.py  app.py  babel.cfg  diff_render.py
app/mock_data/: example_vote_event.json
app/routes/: __init__.py  bills.py  build_bancada_bars.py  congress.py  generate_seats.py  i18n.py  landing.py  processed_session.py  utils.py
app/templates/: base.html
app/translations/: README.md
backend/: README.md  __init__.py  cli.py  config.py
backend/core/: constants.py  enums.py  parsers.py
backend/database/: Dockerfile  README.md  build_db.py  models.py  orchestrator.py  raw_models.py  session.py
backend/process/: README.md  bancadas.py  bills.py  billtext.py  chandra2.py  chandra2_run.py  chandra_2.py  chandra_2_hf.py  chandra_2_vllm.py  congresistas.py  db_read.py  diff.py  diff_structural.py  diff_word.py  extract_votes_DS.py  leyes.py  monitor.sh  motions.py  organizations.py  schema.py  summarization.py  utils.py  votes.py
backend/scrapers/: README.md  bancadas.py  bills.py  bills_documents.py  committees.py  congresista_photos.py  congresistas.py  leyes.py  motions.py  motions_documents.py  organizations.py  utils.py  votes.py
data/: congresistas_2021_2026.json
db/: README.md  RawMigration.Dockerfile  raw_migration.py
docker/cron/: cron.Dockerfile  crontab  entrypoint.sh  run-job.sh
docker/database/: migration.Dockerfile
docker/frontend/: Dockerfile
docs/: architecture.md  bill_difference_contract.md  branch_model.md  contribute.md  data-model.md  data_model.md  endpoints.md  index.md  tech_decisions.md
scripts/: backfill_congresista_photos.py  show_diff.py
tests/: conftest.py
tests/app/: test_bill_detail_route.py  test_bill_difference_route.py  test_bill_search_route.py  test_bill_votes_route.py  test_congress_search_route.py  test_diff_render.py
tests/core/: test_cli.py  test_logging.py  test_parser.py
tests/database/: test_bill_difference.py  test_find_raw_bill_pages.py  test_models.py  test_orchestrator_clean_pipeline.py  test_orchestrator_scraper_flow.py  test_pipeline_core_bulk.py  test_pipeline_embeddings.py  test_pipeline_votes.py  test_raw_migration.py  test_raw_models.py  test_transformation_final.py  test_upsert_bill_text.py
tests/process/: test_chandra2.py  (+10 more)
(+36 files in other folders)
