[project]
name = "OpenPeru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "asyncio>=3.4.3",
    "babel>=2.18.0",
    "boto3>=1.35.0",
    "chandra-ocr>=0.2.0",
    "coverage>=7.13.5",
    "flask>=3.1.3",
    "flask-babel>=4.0.0",
    "httpx[http2]>=0.28.1",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "jellyfish>=1.2.0",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.11.0.86",
    "pandas>=3.0.2",
    "pathlib>=1.0.1",
    "pdf2image>=1.17.0",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "polars>=1.30.0",
    "pre-commit>=4.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
    "scikit-learn>=1.8.0",
    "selenium>=4.33.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.41",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "typing>=3.10.0.0",
]

[tool.uv.sources]
backend = { path = "backend" }

[dependency-groups]
dev = [
    "zensical>=0.0.34",
    "openpyxl>=3.1.5",
]